# rs-firebase-admin-sdk

./: .devcontainer.json  .env  .gitignore  Cargo.toml  README.md
.github/workflows/: checks.yaml  release.yaml
docker/: Dockerfile  docker-compose.yaml
examples/clear_emulator/: Cargo.toml
examples/clear_emulator/src/: main.rs
examples/cookies/: Cargo.toml
examples/cookies/src/: main.rs
examples/explicit_project_id/: Cargo.toml
examples/explicit_project_id/src/: main.rs
examples/get_users/: Cargo.toml
examples/get_users/src/: main.rs
examples/verify_token/: Cargo.toml
examples/verify_token/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/api_uri/: mod.rs
lib/src/auth/: mod.rs  test.rs
lib/src/auth/claims/: mod.rs  test.rs
lib/src/auth/token/: error.rs  mod.rs  test.rs
lib/src/auth/token/cache/: error.rs  mod.rs  test.rs
lib/src/auth/token/crypto/: mod.rs
lib/src/auth/token/jwt/: error.rs  mod.rs  test.rs  util.rs
lib/src/client/: mod.rs
lib/src/credentials/: mod.rs  test.rs
lib/src/credentials/emulator/: mod.rs  test.rs
lib/src/credentials/gcp/: mod.rs
lib/src/jwt/: mod.rs
lib/src/util/: mod.rs  serialize.rs
src/: lib.rs
src/api_uri/: error.rs  mod.rs
src/auth/: mod.rs  test.rs
src/auth/claims/: mod.rs  test.rs
src/auth/import/: mod.rs
src/auth/oob_code/: mod.rs
src/auth/token/: error.rs  mod.rs  test.rs
src/auth/token/cache/: mod.rs  test.rs
src/auth/token/crypto/: mod.rs
src/auth/token/jwt/: mod.rs  test.rs  util.rs
src/client/: error.rs  mod.rs
src/client/url_params/: mod.rs  test.rs
src/credentials/: error.rs
src/util/: mod.rs  serialize.rs  test.rs
