[package]
name = "rs-firebase-admin-sdk"
version = "2.2.0"
rust-version = "1.75"
edition = "2021"
authors = ["Kostas Petrikas"]
categories = ["authentication", "api-bindings", "asynchronous"]
description = "Firebase Admin SDK for Rust"
readme = "../README.md"
repository = "https://github.com/expl/rs-firebase-admin-sdk"
license = "MIT"

[lib]
doctest = false

[dependencies]
tokio = { version = "1.38", features = ["sync"], default-features = false }
error-stack = "0.5"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1.1"
headers = "0.4"
reqwest = { version = "0.12", features = ["rustls-tls", "charset", "json"], default-features = false }
urlencoding = "2.1"
bytes = "1"
gcp_auth = "0.12"
time = { version = "0.3", features = ["serde"] }
base64 = "0.22"
openssl = { version = "0.10", optional = true }

[dev-dependencies]
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
serial_test = "3.0.0"
