[package]
name = "rs-firebase-admin-sdk"
version = "4.1.1"
rust-version = "1.88"
edition = "2024"
authors = ["Kostas Petrikas"]
categories = ["authentication", "api-bindings", "asynchronous"]
description = "Firebase Admin SDK for Rust"
readme = "../README.md"
repository = "https://github.com/expl/rs-firebase-admin-sdk"
license = "MIT"

[lib]
doctest = false

[features]
default = ["tokens", "reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
tokens = ["dep:jsonwebtoken", "dep:jsonwebtoken-jwks-cache"]

[dependencies]
tokio = { version = "1.48", features = ["sync"], default-features = false }
error-stack = "0.6"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1.3"
headers = "0.4"
reqwest = { version = "0.12", features = ["charset", "json"], default-features = false }
urlencoding = "2.1"
bytes = "1"
google-cloud-auth = "1.3"
time = { version = "0.3", features = ["serde"] }
base64 = "0.22"
jsonwebtoken = { version = "10.2", optional = true }
jsonwebtoken-jwks-cache = { version = "0.1", optional = true }

[dev-dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
serial_test = "3.2"
