[package]
name = "clear_emulator"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs-firebase-admin-sdk = { path = "../../lib" }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }